<resources>
    <string name="app_name">BEnergy</string>
    <string name="zero">0 kW</string>
    <string name="see_more">See More</string>
    <string name="my_schedule">MY SCHEDULE</string>
    <string name="login">Login</string>
    <string name="no_account">You don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="email">EMAIL</string>
    <string name="email_hint">Email Address</string>
    <string name="password">PASSWORD</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="user_area">Área de Utilizador</string>
    <string name="name">NAME</string>
    <string name="numero_Telemovel">Nº TELEMÓVEL</string>
    <string name="save">SAVE</string>
    <string name="create_new">Create New</string>
    <string name="account">Account</string>
    <string name="already_registered">Already registered?</string>
    <string name="log_in_here">Log in here.</string>
    <string name="name_hint">Name</string>
    <string name="telemovel_hint">Telemóvel</string>
    <string name="repeat_password">REPEAT PASSWORD</string>
    <string name="sign_up">Sign Up</string>
    <string name="bem_vindo_a">Bem-vindo(a)</string>
    <string name="parte_da_comunidade">Faz agora parte da comunidade BEnergy</string>
    <string name="diversas_funcionalidades">Com a nossa App vais poder aceder a diversas funcionalidades, com</string>
    <string name="prod_energia">Produção de energia</string>
    <string name="prod_por_tempo">Produção diária, semanal, mensal, ou por equipamento</string>
    <string name="ganhar_pontos">Com isto vais poder ganhar pontos</string>
    <string name="marcar_aulas">Marcação de aulas</string>
    <string name="vais_marcar_aulas">Vais poder marcar as tuas aulas de grupo fácilmente.</string>
    <string name="plano_de_treinos">Plano de treinos</string>
    <string name="cria_e_personaliza">Cria e personaliza os teus treinos ou segue os que te sugerimos</string>
    <string name="adicionar_plano">Adicionar Plano</string>
    <string name="explorar_planos">Explorar Planos</string>
    <string name="planos_de_treino">Planos de Treino</string>
    <string name="consulte_e_altere_aqui">Consulte e altere aqui</string>
    <string name="nome_plano">(nome plano)</string>
    <string name="clica_na_imagem">Clica na imagem para saber mais \n \nDeslize para ver mais aulas</string>
    <string name="nossos_planos">Planos BEnergy</string>
    <string name="add_alt_plan">Adicionar/Alterar Plano</string>
    <string name="exercicio_descrição">Exercicio \n descrição</string>
    <string name="descri_o">descrição</string>
    <string name="plus">+</string>
    <string name="skip">SKIP >></string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="gerir_mensalidades">GERIR MENSALIDADES</string>
    <string name="objetivos">Objetivos</string>
    <string name="defina_seus_objetivos">Defina seus objetivos</string>
    <string name="Userobjetivos">OBJETIVOS</string>
    <string name="guardar_objetivos">Guardar Objetivos</string>
    <string name="favorites">FAVORITOS</string>
    <string name="planos_de_treino_m">PLANOS DE TREINO</string>
    <string name="nome_do_plano">Nome do Plano</string>
    <string name="criar_plano">Criar Plano</string>
    <string name="error">ERROR</string>
    <string name="adicionar_exerc_cio">Adicionar Exercício</string>
    <string name="add">ADD</string>
    <string name="alterar_exerc_cio">Alterar Exercício</string>
    <string name="change">CHANGE</string>
    <string name="aulas_de_grupo">Aulas de Grupo</string>
    <string name="confirmar_n_telem_vel">Confirmar Nº. Telemóvel</string>
    <string name="confirmar">Confirmar</string>
    <string name="be_active_be_energy_n_be_part_of_the_change">BE ACTIVE, BE ENERGY \n BE PART OF THE CHANGE</string>
    <string name="entidade_xxxxx">Entidade: XXXXX</string>
    <string name="refer_ncia_xxx_xxx_xxx">Referência: XXX-XXX-XXX</string>
    <string name="montante_xx_xx_euro">Montante: XX.XX Euro</string>
    <string name="concluir">Concluir</string>
    <string name="name_visa">Name:</string>
    <string name="n_cart_o">Nº Cartão:</string>
    <string name="validade">Validade:</string>
    <string name="cvc">CVC:</string>
    <string name="realizar_pagemento">Realizar Pagemento</string>
</resources>