<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="336dp"
        android:text="@string/bem_vindo_a"
        android:textAlignment="center"
        android:textColor="@color/verde_titulo"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="286dp"
        android:layout_height="69dp"
        android:layout_marginBottom="264dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/parte_da_comunidade"
        android:textAlignment="center"
        android:textColor="@color/cinza_escuro"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="387dp"
        android:layout_height="53dp"
        android:layout_marginBottom="220dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/diversas_funcionalidades"
        android:textAlignment="center"
        android:textColor="@color/cinza_escuro"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tittle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="227dp"
        android:layout_height="143dp"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bola1e4"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/skip1"
        android:layout_width="99dp"
        android:layout_height="32dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="sans-serif"
        android:text="@string/skip"
        android:textAlignment="center"
        android:textColor="#CDCCCC"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />


</androidx.constraintlayout.widget.ConstraintLayout>